--- a/tutorials/Tutorial4 - visualize recovery results.ipynb
+++ b/tutorials/Tutorial4 - visualize recovery results.ipynb
@@ -24,7 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-u0owrhje because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-jjmry2w9 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -39,7 +39,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-01-26 15:54:36.086507: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-02-23 10:24:42.528339: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "bad4e3b9-6d84-4b7f-a9ba-561ce61c10de",
    "metadata": {},
    "outputs": [],
@@ -67,10 +67,13 @@
     "Define network architecture and load latest checkpoint from directory\n",
     "Change the path of checkpoint_dir to where the checkpoint is saved.\n",
     "\"\"\"\n",
-    "checkpoint_dir = 'checkpoints/sparsity_new/full_image.nspots5.true_axis.2022-01-20.10:36:30/'\n",
+    "checkpoint_dir = 'checkpoints/tutorial3/'\n",
+    "orbit_radius = 3.5\n",
+    "orbit_period = orbit_radius**(-3./2.) \n",
+    "velocity_field = lambda r: (1.0 / orbit_period) * r**(-3/2)\n",
+    "orbit_args = {'tstart': 0.0, 'tstop': 1.0, 'axis_init': jnp.array([-0.4556, 0.5549, 0.6961]), 'velocity': velocity_field}\n",
     "\n",
-    "orbit_args = {'tstart': 0.0, 'tstop': 1.0, 'axis_init': jnp.array([-0.4556, 0.5549, 0.6961]), 'velocity': 1.0 }\n",
-    "predictor = bhnerf.network.NeRF3D_RotationAxis()\n",
+    "predictor = bhnerf.network.NeRF_RotationAxis()\n",
     "emission_op = bhnerf.network.EmissionOperator(predictor, orbit_args)\n",
     "state = checkpoints.restore_checkpoint(checkpoint_dir, None)"
    ]
@@ -91,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "ae2f8a17-9643-49a9-bf37-fc3563f65669",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf67d4d3d66c48f8ba6d6b06da605691",
+       "model_id": "0664c4b287e44096ac23c5997c5c1073",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,6 +111,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-02-23 10:29:08.507275: E external/org_tensorflow/tensorflow/compiler/xla/service/slow_operation_alarm.cc:55] \n",
+      "********************************\n",
+      "Very slow compile?  If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
+      "Compiling module jit_draw_cube_jit.137857\n",
+      "********************************\n"
+     ]
     }
    ],
    "source": [
@@ -120,21 +134,21 @@
     "for azimuth in tqdm(np.linspace(0.0, 360, 6)):\n",
     "    visualizer.set_view(radius=27.5, azimuth=azimuth, zenith=np.pi/3)\n",
     "    t, x, y, z = jnp.ones_like(visualizer.x), visualizer.x, visualizer.y, visualizer.z\n",
-    "    emission = emission_op(state['params'], x, y, z, t)\n",
-    "    emission = bhnerf.emission.zero_unsupervised_emission(emission, x, y, z, rmin=2.0, rmax=5.0)\n",
+    "    emission = emission_op(state['params'], [t, x, y, z])\n",
+    "    emission = bhnerf.emission.zero_unsupervised_emission(emission, [x, y, z], rmin=2.0, rmax=5.0)\n",
     "    images.append(visualizer.render(emission, jit=True, norm_const=1.0, bh_radius=2.0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "edd5d918-1edc-473d-b89d-9cc4db729490",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "776af4bfd83b4b7880bd66a540cb68cf",
+       "model_id": "839b37ce4fc34a129f79e1493e010296",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "98840438-9f43-4d5c-a3dc-42fb07266fe5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5167333038f4b8db2f2317f00bc4db7",
+       "model_id": "4285618687eb4526a3b95d1f186b5553",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,24 +207,24 @@
     "View the estimated emission at from the same angle at different times using the estimated rotation axis.\n",
     "\"\"\"\n",
     "images = []\n",
+    "visualizer.set_view(radius=27.5, azimuth=np.pi/4, zenith=np.pi/4)\n",
     "for frame in tqdm(np.linspace(0.0, 1.0, 6)):\n",
-    "    visualizer.set_view(radius=27.5, azimuth=np.pi/4, zenith=np.pi/4)\n",
     "    t, x, y, z = frame * jnp.ones_like(visualizer.x), visualizer.x, visualizer.y, visualizer.z\n",
-    "    emission = emission_op(state['params'], x, y, z, t)\n",
-    "    emission = bhnerf.emission.zero_unsupervised_emission(emission, x, y, z, rmin=2.0, rmax=5.0)\n",
+    "    emission = emission_op(state['params'], [t, x, y, z])\n",
+    "    emission = bhnerf.emission.zero_unsupervised_emission(emission, [x, y, z], rmin=2.0, rmax=5.0)\n",
     "    images.append(visualizer.render(emission, jit=True, norm_const=1.0, bh_radius=2.0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "ce08d67c-b0f5-40e9-9c2b-542c16731d23",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2bb65e455ca4c33a66dd2a2a4a23d74",
+       "model_id": "7696fc1fc8d044efba51d1977175d070",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,7 +239,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
       "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
       "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
       "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
