major revision, added doppler boosting and slow light

--- a/tutorials/Tutorial2 - synthesize ngEHT observations.ipynb
+++ b/tutorials/Tutorial2 - synthesize ngEHT observations.ipynb
@@ -10,82 +10,65 @@
     "# Tutorial2: generating synthetic ngEHT observations\n",
     "\n",
     "---\n",
-    "This tutorial demonstrates synthesis of ngEHT measurements of a single orbiting hot-spot. This tutorial assumes a sensor xr.Dataset was generated and saved and is ready to be loaded (see Tutorial1 for more details). The sensor dataset contains information about rays geometry assuming a black-hole with a given spin and mass. In this example we used spin=0 with r_g=2 to generate rays, which results in an inner most stable circular orbit (ISCO) of 3M [1]. \n",
-    "\n",
-    "\n",
-    "[1] Overleaf notes: https://www.overleaf.com/project/60ff0ece5aa4f90d07f2a417"
+    "This tutorial demonstrates synthesis of ngEHT measurements of a single orbiting hot-spot. EHT observations are simulated using [eht-imaging](https://github.com/achael/eht-imaging)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "b85f8e98-8ea4-4e4c-9304-038107b539e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import bhnerf\n",
     "import numpy as np\n",
     "import xarray as xr\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import bhnerf\n",
+    "import ehtim as eh\n",
+    "from astropy import units\n",
+    "from bhnerf import constants as consts"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f70ecb40-d77f-4d00-b69d-8a375a3dcee6",
+   "id": "162239b3-c374-4710-ba75-f8aa72e7b70d",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Generate an initial frame (3D DataArray) with single Gaussian hotspot\n",
+    "Generate an initial emission distribution (emission_0: 3D DataArray) with single Gaussian hotspot\n",
     "\"\"\"\n",
-    "spatial_res = (64, 64, 64) # (nx, ny, nz)\n",
+    "spin = 0.2\n",
+    "inclination = np.deg2rad(60)\n",
+    "fov_M = 16.0\n",
     "\n",
-    "r_isco = 3.0 \n",
-    "orbit_radius = 3.5 \n",
-    "std = .4\n",
-    "\n",
-    "rot_angle = 0.0  # initial orbital angle\n",
-    "rot_axis = [-0.5, 0.0, 0.8660254]\n",
-    "initial_frame = bhnerf.emission.generate_hotspot_xr(spatial_res, rot_axis, rot_angle, orbit_radius, std, r_isco)"
+    "emission_0 = bhnerf.emission.generate_hotspot_xr(\n",
+    "    resolution=(64, 64, 64), \n",
+    "    rot_axis=[0.0, 0.0, 1.0], \n",
+    "    rot_angle=0.0,\n",
+    "    orbit_radius=5.5,\n",
+    "    std=0.7,\n",
+    "    r_isco=bhnerf.constants.isco_pro(spin),\n",
+    "    fov=(fov_M, 'GM/c^2'),\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "be7f9410-c4ef-4d82-8155-c0d0ce451248",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Progegate initial frame through time (4D DataArray) with a velocity field as a function of radius.\n",
-    "This results in a shearing hotspot.\n",
-    "\"\"\"\n",
-    "nt = 128\n",
-    "orbit_period = orbit_radius**(-3./2.) \n",
-    "velocity_field = lambda r: (1.0 / orbit_period) * r**(-3/2)\n",
-    "emission = bhnerf.emission.generate_orbit(initial_frame, nt, velocity_field, rot_axis)\n",
-    "\n",
-    "# Normalize emission values \n",
-    "normalization_factor = 0.02\n",
-    "emissions = emission * normalization_factor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a014df91-1c45-4216-871c-8b012c49404c",
+   "id": "c71740ca-1eff-4521-83c3-8a87b0d429ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3200eb1fe72142e39f488cb8395d5073",
+       "model_id": "9d905193837d4bebab964757b58ddd25",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='t', max=127), Output()), _dom_classes=('widget-interact'…"
+       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, -2.1650635094610964, 1.250000000000000…"
       ]
      },
      "metadata": {},
@@ -94,45 +77,99 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Slider visualization to illustrate the volumetric shearing\n",
-    "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
+    "Visualization 3D volume (requires ipyvolume: https://ipyvolume.readthedocs.io/)\n",
     "\"\"\"\n",
     "import ipyvolume as ipv\n",
-    "from ipywidgets import interact\n",
-    "import ipywidgets as widgets\n",
     "\n",
-    "extent = [(float(emission[dim].min()), float(emission[dim].max())) for dim in ('x', 'y', 'z')]\n",
-    "@interact(t=widgets.IntSlider(min=0, max=emission.t.size-1, step=1, value=0))\n",
-    "def plot_vol(t):\n",
-    "    ipv.figure()\n",
-    "    ipv.view(0, -60, distance=2.5)\n",
-    "    ipv.volshow(emission.isel(t=t), extent=extent, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
-    "    ipv.show()"
+    "extent = [(-fov_M/2, fov_M/2) for dim in ('x', 'y', 'z')]\n",
+    "ipv.figure()\n",
+    "ipv.view(0, -60, distance=2.5)\n",
+    "ipv.volshow(emission_0, extent=extent, memorder='F', level=[0, 0.2, 0.7], opacity=[0, 0.2, 0.3], controls=False)\n",
+    "ipv.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "ee802293-45fb-40b2-aabe-bdacd30e82b6",
+   "execution_count": 5,
+   "id": "beaa5c8c-a859-46a5-982e-bdeb01a39bf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  result_data = func(*input_data)\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
-    "Load a precomuted sensor Dataset and integrate over the 4D emission field to get 3D image-plane movie.  \n",
+    "Compute Kerr geodesics (photon trajectories) around the black hole starting at the image plane\n",
     "\"\"\"\n",
-    "sensor = xr.load_dataset('../sensors/a0.00_th1.57_ngeo100_npix4096.nc')\n",
+    "geos = bhnerf.emission.kerr_geodesics(\n",
+    "    spin, inclination, \n",
+    "    num_alpha=64, num_beta=64, \n",
+    "    alpha_range=[-fov_M/2, fov_M/2],\n",
+    "    beta_range=[-fov_M/2, fov_M/2]\n",
+    ")\n",
     "\n",
-    "# Integrate emission within 5M of the black hole center\n",
-    "sensor = sensor.where(sensor.r < 5).fillna(0.0)\n",
-    "image_pixels = bhnerf.emission.integrate_rays(emission, sensor)\n",
-    "image_plane = image_pixels.data.reshape(nt, sensor.num_alpha, sensor.num_beta)\n",
-    "image_plane_xr = xr.DataArray(image_plane, dims=['t', 'alpha', 'beta'])"
+    "Omega = np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
+    "geos = bhnerf.emission.compute_keplerian_velocity(geos, Omega=Omega)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "f02cddcc-47b2-4beb-9fff-0a423061991e",
+   "execution_count": 7,
+   "id": "f72f3b4f-9fa7-4e95-aae3-f2b88df74a7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ca92193818b14fb3af1b7a58a45cbc95",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.animation.FuncAnimation at 0x7efc081ccbb0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Ray trace through the emission to simulate the image plane over 40.0 minutes and visualize image plane movie\n",
+    "t_frames: frame time in hrs \n",
+    "t_injection: hotspot injection time (M) - needed for slow-light (light does not reach the sensor instantaneously) \n",
+    "             Taking the distance of the image screen (-geos.r_o) gives an injection at the initial frame (approximately) \n",
+    "\"\"\"\n",
+    "nt = 64\n",
+    "t_injection = -float(geos.r_o) \n",
+    "t_frames = np.linspace(0.0, 40.0*units.min, nt)\n",
+    "image_plane = bhnerf.emission.image_plane_dynamics(emission_0, geos, t_frames, t_injection)\n",
+    "\n",
+    "%matplotlib widget\n",
+    "movie_xr = xr.DataArray(image_plane, dims=['t', 'alpha', 'beta'])\n",
+    "movie_xr.visualization.animate(cmap='afmhot')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "70414b5b-925f-4c92-aaa5-903a5fa82fa4",
    "metadata": {},
    "outputs": [
     {
@@ -140,53 +177,49 @@
      "output_type": "stream",
      "text": [
       "Producing clean visibilities from movie with nfft FT . . . \n",
-      "Adding gain + phase errors to data and applying a priori calibration . . . \n",
-      "Adding thermal noise to data . . . \n"
+      "Applying Jones Matrices to data . . . \n",
+      "Applying Jones Matrices to data . . . \n",
+      "Adding thermal noise to data . . . \n",
+      "Applying a priori calibration with estimated Jones matrices . . . \n"
      ]
     }
    ],
    "source": [
     "\"\"\"\n",
-    "Generate synthetic ngEHT observations of the image plane.\n",
-    "This requires eht-imaging: https://github.com/achael/eht-imaging\n",
+    "Generate synthetic EHT obsertvations using eht-imaging library\n",
     "\"\"\"\n",
-    "import ehtim as eh\n",
-    "\n",
-    "fov = 85.0               # field of view in uas \n",
     "obs_params = {\n",
-    "    'mjd': 57851,\n",
-    "    'array': eh.array.load_txt('../eht_arrays/ngEHT.txt'),\n",
+    "    'mjd': 57851,                                 # night of april 6-7, 2017\n",
     "    'timetype': 'GMST',\n",
-    "    'nt': 128,           # number of time samples \n",
-    "    'tstart': 2.0,       # start of observations\n",
-    "    'tstop': 2.0 + 2/3,  # end of observation \n",
-    "    'tint': 15.0         # integration time\n",
+    "    'nt': nt,                                     # number of time samples \n",
+    "    'tstart': 2.0 + t_frames[0].to('hr').value,   # start of observations\n",
+    "    'tstop': 2.0 + t_frames[-1].to('hr').value,   # end of observation \n",
+    "    'tint': 30.0,                                 # integration time,\n",
+    "    'array': eh.array.load_txt('../eht_arrays/ngEHT.txt')\n",
     "}\n",
     "obs_empty = bhnerf.observation.empty_eht_obs(**obs_params)\n",
     "\n",
+    "# Pixel size in radians based on Sgr A* mass/distance\n",
+    "fov_rad = (fov_M * consts.GM_c2(consts.sgra_mass) / consts.sgra_distance.to('m')) * units.rad\n",
+    "psize = fov_rad.value / geos.alpha.size\n",
+    "obs_args = {'psize': psize, 'ra': obs_empty.ra, 'dec': obs_empty.dec, 'rf': obs_empty.rf, 'mjd': obs_empty.mjd}\n",
     "\n",
-    "obs_args = {\n",
-    "    'psize': fov / sensor.num_alpha * eh.ehc.RADPERUAS,\n",
-    "    'ra': obs_empty.ra, \n",
-    "    'dec': obs_empty.dec,\n",
-    "    'rf': obs_empty.rf, \n",
-    "    'mjd': obs_empty.mjd\n",
-    "}\n",
-    "times = np.linspace(obs_params['tstart'], obs_params['tstop'], obs_params['nt'])\n",
-    "movie = eh.movie.Movie(image_plane, times=times, **obs_args)\n",
-    "obs = movie.observe_same(obs_empty)"
+    "# Scale image-plane values to `reasonable` fluxes  \n",
+    "flux_scaling = 0.01  \n",
+    "movie = eh.movie.Movie(flux_scaling*image_plane, times=t_frames.value, **obs_args)\n",
+    "obs = bhnerf.observation.observe_same(movie, obs_empty)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "aa15a0a4-daf3-4d00-a620-c34de422b3fd",
+   "execution_count": 9,
+   "id": "40b072fb-8e00-4343-a70d-596ec40c7420",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "384c6fe8ea4849de9d9516483768b630",
+       "model_id": "870ea83609f94b42a6e044e626d159df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,16 +233,14 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Visualize image-plane movie and ngEHT measurements\n",
+    "Visualize coverage and visibility amplitudes\n",
     "\"\"\"\n",
     "%matplotlib widget\n",
-    "fig, ax = plt.subplots(1, 3, figsize=(12,3.5))\n",
-    "ax[0].set_title('Image plane')\n",
-    "ax[1].set_title('UV coverage')\n",
-    "ax[2].set_title('Visibility amplitudes')\n",
-    "anim = image_plane_xr.visualization.animate(ax=ax[0], cmap='afmhot', add_colorbar=False)\n",
-    "bhnerf.observation.plot_uv_coverage(obs_empty, ax=ax[1], cmap_ticks=[0,0.2, 0.4, 0.6], fontsize=11)\n",
-    "obs.plotall('uvdist', 'amp', axis=ax[2])\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(8,3.5))\n",
+    "ax[0].set_title('UV coverage')\n",
+    "ax[1].set_title('Visibility amplitudes')\n",
+    "bhnerf.observation.plot_uv_coverage(obs_empty, ax=ax[0], cmap_ticks=[0,0.2, 0.4, 0.6], fontsize=11)\n",
+    "obs.plotall('uvdist', 'amp', axis=ax[1])\n",
     "plt.tight_layout()"
    ]
   }
