--- a/tutorials/Tutorial4 - visualize recovery results.ipynb
+++ b/tutorials/Tutorial4 - visualize recovery results.ipynb
@@ -16,6 +16,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "id": "411fa50c-94a1-4c6d-bef1-7a6a469b5247",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$8.2598546 \\times 10^{36} \\; \\mathrm{kg}$"
+      ],
+      "text/plain": [
+       "<Quantity 8.2598546e+36 kg>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bhnerf.constants.sgra_mass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "dbf1765c-890a-4c7a-a16d-c8a64b217f43",
    "metadata": {},
@@ -24,7 +48,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-jjmry2w9 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-l7hxp8i9 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     },
     {
@@ -39,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-02-23 10:24:42.528339: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2022-07-05 18:53:05.854196: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -52,35 +76,27 @@
     "from tqdm.notebook import tqdm\n",
     "from jax import numpy as jnp\n",
     "from flax.training import checkpoints\n",
+    "from astropy import units\n",
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '1'"
+    "\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '3'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "bad4e3b9-6d84-4b7f-a9ba-561ce61c10de",
+   "execution_count": 81,
+   "id": "c2118c19-fccf-405c-897b-90e72a89a62f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Define network architecture and load latest checkpoint from directory\n",
-    "Change the path of checkpoint_dir to where the checkpoint is saved.\n",
-    "\"\"\"\n",
-    "checkpoint_dir = 'checkpoints/tutorial3/'\n",
-    "orbit_radius = 3.5\n",
-    "orbit_period = orbit_radius**(-3./2.) \n",
-    "velocity_field = lambda r: (1.0 / orbit_period) * r**(-3/2)\n",
-    "orbit_args = {'tstart': 0.0, 'tstop': 1.0, 'axis_init': jnp.array([-0.4556, 0.5549, 0.6961]), 'velocity': velocity_field}\n",
-    "\n",
-    "predictor = bhnerf.network.NeRF_RotationAxis()\n",
-    "emission_op = bhnerf.network.EmissionOperator(predictor, orbit_args)\n",
+    "checkpoint_dir = '../checkpoints/tutorial3/test_no_g.t.2022-07-05.18:55:19/'\n",
+    "predictor = bhnerf.network.NeRF_Predictor()\n",
     "state = checkpoints.restore_checkpoint(checkpoint_dir, None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "33fe4359-b3d1-4901-98c1-99b5d4e390a8",
    "metadata": {},
    "outputs": [],
@@ -94,14 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "ae2f8a17-9643-49a9-bf37-fc3563f65669",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0664c4b287e44096ac23c5997c5c1073",
+       "model_id": "28c7e722b0e5438796d756f91381ab79",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,17 +127,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-02-23 10:29:08.507275: E external/org_tensorflow/tensorflow/compiler/xla/service/slow_operation_alarm.cc:55] \n",
-      "********************************\n",
-      "Very slow compile?  If you want to file a bug, run with envvar XLA_FLAGS=--xla_dump_to=/tmp/foo and attach the results.\n",
-      "Compiling module jit_draw_cube_jit.137857\n",
-      "********************************\n"
-     ]
     }
    ],
    "source": [
@@ -131,24 +136,89 @@
     "Note that jit is useful for acceleration however the initial rendering will be slow due to run time compilation.\n",
     "\"\"\"\n",
     "images = []\n",
+    "bh_radius = 2.0\n",
+    "norm_const = 0.02\n",
+    "rmax = 8.0\n",
+    "\n",
     "for azimuth in tqdm(np.linspace(0.0, 360, 6)):\n",
-    "    visualizer.set_view(radius=27.5, azimuth=azimuth, zenith=np.pi/3)\n",
-    "    t, x, y, z = jnp.ones_like(visualizer.x), visualizer.x, visualizer.y, visualizer.z\n",
-    "    emission = emission_op(state['params'], [t, x, y, z])\n",
-    "    emission = bhnerf.emission.zero_unsupervised_emission(emission, [x, y, z], rmin=2.0, rmax=5.0)\n",
-    "    images.append(visualizer.render(emission, jit=True, norm_const=1.0, bh_radius=2.0))"
+    "    visualizer.set_view(radius=32.5, azimuth=azimuth, zenith=np.pi/3)\n",
+    "    emission = predictor.apply({'params': state['params']}, 0.0, units.hr, visualizer.coords, 0.0, 0.0, 0.0, 0.0)\n",
+    "    emission = bhnerf.emission.fill_unsupervised_emission(emission, visualizer.coords, rmin=bh_radius, rmax=rmax)\n",
+    "    images.append(visualizer.render(emission, facewidth=rmax, jit=True, norm_const=norm_const, bh_radius=bh_radius))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
+   "id": "d5ead7db-acf3-4499-86fe-ad689c31246b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = []\n",
+    "bh_radius = 2.0\n",
+    "norm_const = 0.02\n",
+    "rmax = 8.0\n",
+    "azimuth = 0.0\n",
+    "\n",
+    "visualizer.set_view(radius=27.5, azimuth=azimuth, zenith=np.pi/3)\n",
+    "emission = predictor.apply({'params': state['params']}, 0.0, units.hr, visualizer.coords, 0.0, 0.0, 0.0, 0.0)\n",
+    "emission = bhnerf.emission.fill_unsupervised_emission(emission, visualizer.coords, rmin=bh_radius)\n",
+    "image = visualizer.render(emission, facewidth=2*rmax, jit=True, norm_const=norm_const, bh_radius=bh_radius)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "29bae921-b7b3-4c63-b19b-3f86f7c640ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5ad45d3f12304ee28630d34e42772dd7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x7fbb784cd850>"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%matplotlib widget\n",
+    "plt.imshow(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "edd5d918-1edc-473d-b89d-9cc4db729490",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "839b37ce4fc34a129f79e1493e010296",
+       "model_id": "6742d27fc2674c66a151f7250d6152a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,10 +234,6 @@
      "output_type": "stream",
      "text": [
       "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
       "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
      ]
     }
@@ -176,83 +242,8 @@
     "%matplotlib widget\n",
     "fig, axes = plt.subplots(1, 6, figsize=(10,2))\n",
     "for ax, image in zip(axes, images):\n",
-    "    ax.imshow(image)\n",
-    "    ax.axis('off')\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "98840438-9f43-4d5c-a3dc-42fb07266fe5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4285618687eb4526a3b95d1f186b5553",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/6 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "View the estimated emission at from the same angle at different times using the estimated rotation axis.\n",
-    "\"\"\"\n",
-    "images = []\n",
-    "visualizer.set_view(radius=27.5, azimuth=np.pi/4, zenith=np.pi/4)\n",
-    "for frame in tqdm(np.linspace(0.0, 1.0, 6)):\n",
-    "    t, x, y, z = frame * jnp.ones_like(visualizer.x), visualizer.x, visualizer.y, visualizer.z\n",
-    "    emission = emission_op(state['params'], [t, x, y, z])\n",
-    "    emission = bhnerf.emission.zero_unsupervised_emission(emission, [x, y, z], rmin=2.0, rmax=5.0)\n",
-    "    images.append(visualizer.render(emission, jit=True, norm_const=1.0, bh_radius=2.0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "ce08d67c-b0f5-40e9-9c2b-542c16731d23",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7696fc1fc8d044efba51d1977175d070",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
-      "WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
-     ]
-    }
-   ],
-   "source": [
-    "%matplotlib widget\n",
-    "fig, axes = plt.subplots(1, 6, figsize=(10,2))\n",
-    "for ax, image in zip(axes, images):\n",
-    "    ax.imshow(image)\n",
-    "    ax.axis('off')\n",
+    "    ax.imshow(image);\n",
+    "    ax.axis('off');\n",
     "plt.tight_layout()"
    ]
   }
